--- a/tree.html
+++ b/tree.html
@@ -200,7 +200,8 @@
             { hook: "Fund", path: hookfigma.hook9, label: "📦 APIs e Integrações (gmcatalog-rest)", url: github + "/gmcatalog-rest", description: "Projeto Java Spring" },
             { hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github + "/gmcatalog-rest", description: "Projeto Java Spring" },
             { hook: "Monolíto", path: hookfigma.hook14, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github + "/gmcatalog-rest", description: "Projeto gmcatalog com API RESTful, desenvolvido em Java Spring." },            
-            { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ GCP/Heroku Docker - GitHub Actions.", url: github+"/cicd", description: "Aplicação Flask Dockerizada com CI/CD Automatizado" }
+            { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ GCP/Heroku Docker - GitHub Actions.", url: github+"/cicd", description: "Aplicação Flask Dockerizada com CI/CD Automatizado" },
+            { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ Laravel - GitHub Actions - GCP.", url: github+"/laravel-docker-app", description: "Projeto Laravel Dockerizado com CI/CD - GitHub Actions - Google Cloud Run." }
         ];
 
         /**
