--- a/tree.html
+++ b/tree.html
@@ -203,7 +203,9 @@
             { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ GCP/Heroku Docker - GitHub Actions.", url: github+"/cicd", description: "Aplicação Flask Dockerizada com CI/CD Automatizado" },
             { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ Laravel - GitHub Actions - GCP.", url: github+"/laravel-docker-app", description: "Projeto Laravel Dockerizado com CI/CD - GitHub Actions - Google Cloud Run." },
             { hook: "Skils", path: hookfigma.hook17, label: "🗣️ Pratice Vocabulary", url: github+"/tofluence", description: "Pratice Vocabulary - Ferramenta de Potencialização de Vocabulário Inglês"},
-            { hook: "DadosIA", path: hookfigma.hook1, label: "🩸 Sistema Registro, controle e análise de Glicemia.", url: github+"/dextro", description: "Sistema moderno com analise de dados para controle glicêmico"}
+            { hook: "DadosIA", path: hookfigma.hook1, label: "🩸 Sistema Registro, controle e análise de Glicemia.", url: github+"/dextro", description: "Sistema moderno com analise de dados para controle glicêmico"},
+            { hook: "Dev", path: hookfigma.hook7, label: "☕️ Hello word Java + angular", url: github+"/angular-frontend", description: "Hello word Java + angular"},
+            { hook: "DadosIA", path: hookfigma.hook1, label: "📈 Analise de dados R", url: github+"/R", description: "Análise de Vendas de uma Loja de Varejo"}
         ];
 
         /**
