--- a/tree.html
+++ b/tree.html
@@ -207,7 +207,8 @@
             { hook: "Dev", path: hookfigma.hook7, label: "☕️ Hello word Java + angular", url: github+"/angular-frontend", description: "Hello word Java + angular"},
             { hook: "DadosIA", path: hookfigma.hook1, label: "📈 Analise de dados R", url: github+"/R", description: "Análise de Vendas de uma Loja de Varejo"},
             { hook: "Monolíto", path: hookfigma.hook14, label: "🌬️ Consulta de Qualidade do Ar - Flask", url: github+"/weather", description: "Consulta de Qualidade do Ar - Flask"},
-            { hook: "Dev", path: hookfigma.hook7, label: "💸 Creditos de Carbono Django", url: github+"/carbon_credit", description: "Creditos de Carbono Django"}
+            { hook: "Dev", path: hookfigma.hook7, label: "💸 Creditos de Carbono Django", url: github+"/carbon_credit", description: "Creditos de Carbono Django"},
+            { hook: "DadosIA", path: hookfigma.hook1, label: "🎲 Java com Dados e IA", url: github+"/dados_java_ia", description: "java com Dados e IA" }
         ];
 
         /**
