--- a/tree.html
+++ b/tree.html
@@ -178,38 +178,41 @@
         // Mapeamento direto de links para hooks, usando o hookfigma para referências.
         // Isso evita repetições e melhora a legibilidade.
         const linksDataFigma = [
-            { hook: "DadosIA", path: hookfigma.hook2, label: "📈 Análise Turnover (Python, ML)", url: github + "/turnover", description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow" },
-            { hook: "DadosIA", path: hookfigma.hook2, label: "🔗 Dashboard Empresarial - Projeto Power BI", url: github + "/py_powerbi", description: "Dashboard Geral da Empresa utilizando Python, Dash e Plotly, com integração via Docker" },
-            { hook: "DadosIA", path: hookfigma.hook2, label: "📈 Análise Turnover (ML, Previsão)", url: github + "/turnover", description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow" },
-            { hook: "DadosIA", path: hookfigma.hook1, label: "🧠 Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: github + "/yt-transcribe-ai", description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA." },
-            { hook: "DadosIA", path: hookfigma.hook3, label: "🧠 Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: github + "/yt-transcribe-ai", description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA." },
-            { hook: "IoT", path: hookfigma.hook4, label: "🎹 MIDI Controller (USB)", url: github + "/Midi_Arduino", description: "Projeto de um controlador MIDI baseado em Arduino." },
-            { hook: "IoT", path: hookfigma.hook5, label: "🎹 MIDI Controller (USB)", url: github + "/Midi_Arduino", description: "Projeto de um controlador MIDI baseado em Arduino." },
-            { hook: "DevOps", path: hookfigma.hook6, label: "🐳 Amb. Dev Docker Genérico", url: github + "/script_docker", description: "Configuração de ambiente de desenvolvimento utilizando Docker Compose." },
-            { hook: "Dev", path: hookfigma.hook8, label: "🎮 Jogo JS (JavaScript)", url: github + "/game_javascript", description: "Projeto de jogo baseado em JavaScript." },
-            { hook: "Fund", path: hookfigma.hook10, label: "Flutter Mobile", url: github + "/apptast", description: "TechTaste - Aplicativo de Restaurantes" },
-            { hook: "Fund", path: hookfigma.hook10, label: "🐳 Python (Amb. Dev Docker)", url: github + "/script_docker", description: "Extrutura base para aplicação python" },
-            { hook: "Fund", path: hookfigma.hook12, label: "📚 Reengenharia de Funções", url: github + "/appdla", description: "Desafio 21 Dias de Código Fonte TV" },
-            { hook: "Fund", path: hookfigma.hook12, label: "🌊 Gerenciamento de Estudos", url: github + "/StudyFlow", description: "Seu Assistente de Estudos Tecnológicos" },
-            { hook: "Skils", path: hookfigma.hook13, label: "💼 PHP (Portfólio Geral)", url: github, description: "Portifolio" },
-            { hook: "Dev", path: hookfigma.hook16, label: "📱 App Tast mobile (Android).", url: github + "/apptast", description: "Projeto ou curso da Alura relacionado a desenvolvimento mobile, provavelmente Android." },
-            { hook: "DadosIA", path: hookfigma.hook3, label: "🎯 Extraindo legenda do youTube", url: github + "/youtube-transcript", description: "Extraindo legenda do youTube usando pynthon" },
-            { hook: "DevOps", path: hookfigma.hook18, label: "📚 Sistema de Gestão Escolar", url: github + "/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**." },
-            { hook: "Monolíto", path: hookfigma.hook14, label: "📚 Sistema de Gestão Escolar", url: github + "/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**." },
-            { hook: "Dev", path: hookfigma.hook7, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github + "/gmcatalog-rest", description: "Projeto Java Spring" },
-            { hook: "Fund", path: hookfigma.hook9, label: "📦 APIs e Integrações (gmcatalog-rest)", url: github + "/gmcatalog-rest", description: "Projeto Java Spring" },
-            { hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github + "/gmcatalog-rest", description: "Projeto Java Spring" },
-            { hook: "Monolíto", path: hookfigma.hook14, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github + "/gmcatalog-rest", description: "Projeto gmcatalog com API RESTful, desenvolvido em Java Spring." },            
-            { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ GCP/Heroku Docker - GitHub Actions.", url: github+"/cicd", description: "Aplicação Flask Dockerizada com CI/CD Automatizado" },
-            { hook: "DevOps", path: hookfigma.hook18, label: "⚙️ Laravel - GitHub Actions - GCP.", url: github+"/laravel-docker-app", description: "Projeto Laravel Dockerizado com CI/CD - GitHub Actions - Google Cloud Run." },
-            { hook: "Skils", path: hookfigma.hook17, label: "🗣️ Pratice Vocabulary", url: github+"/tofluence", description: "Pratice Vocabulary - Ferramenta de Potencialização de Vocabulário Inglês"},
-            { hook: "DadosIA", path: hookfigma.hook1, label: "🩸 Sistema Registro, controle e análise de Glicemia.", url: github+"/dextro", description: "Sistema moderno com analise de dados para controle glicêmico"},
-            { hook: "Dev", path: hookfigma.hook7, label: "☕️ Hello word Java + angular", url: github+"/angular-frontend", description: "Hello word Java + angular"},
-            { hook: "DadosIA", path: hookfigma.hook1, label: "📈 Analise de dados R", url: github+"/R", description: "Análise de Vendas de uma Loja de Varejo"},
-            { hook: "Monolíto", path: hookfigma.hook14, label: "🌬️ Consulta de Qualidade do Ar - Flask", url: github+"/weather", description: "Consulta de Qualidade do Ar - Flask"},
-            { hook: "Dev", path: hookfigma.hook7, label: "💸 Creditos de Carbono Django", url: github+"/carbon_credit", description: "Creditos de Carbono Django"},
-            { hook: "DadosIA", path: hookfigma.hook1, label: "🎲 Java com Dados e IA", url: github+"/dados_java_ia", description: "java com Dados e IA" },
-            { hook: "DadosIA", path: hookfigma.hook1, label: "🤖 Agente AI Google Gemini usando Java Spring Boot", url: github+"/agente_ai", description: "Agente de AI Google Gemini usando Java Spring Boot" }
+{ hook: "DadosIA", path: hookfigma.hook1, label: "🩸 Registro de Glicemia", url: github+"/dextro", description: "⭐ Sistema moderno com analise de dados para controle glicêmico"},
+{ hook: "IoT", path: hookfigma.hook4, label: "🎹 Controlador MIDI baseado em Arduino.", url: github+"/Midi_Arduino", description: "⭐ Projeto de um controlador MIDI baseado em Arduino."},
+{ hook: "IoT", path: hookfigma.hook5, label: "🎹 Controlador MIDI baseado em Arduino.", url: github+"/Midi_Arduino", description: "⭐ Projeto de um controlador MIDI baseado em Arduino."},
+{ hook: "DevOps", path: hookfigma.hook18, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "⭐ A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**."},
+{ hook: "Monolíto", path: hookfigma.hook14, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "⭐ A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**."},
+{ hook: "Dev", path: hookfigma.hook16, label: "📱 Desenvolvimento Flutter (Android).", url: github+"/apptast", description: "⭐ Projeto ou curso da Alura relacionado a desenvolvimento mobile, provavelmente Android."},
+{ hook: "Monolíto", path: hookfigma.hook14, label: "🌬️ Consulta de Qualidade do Ar - Flask", url: github+"/weather", description: "⭐ Consulta de Qualidade do Ar - Flask"},
+{ hook: "Fund", path: hookfigma.hook12, label: "📚 Fundamentos - appdla Python/React.", url: github+"/appdla", description: "⭐ Parte de um curso 21 Days do Código Fonte TV, relacionado a appdla (informação insuficiente para detalhar o tema, mas categorizado como curso)."},
+{ hook: "Fund", path: hookfigma.hook12, label: "🌊 Gerenciamento de Estudos (StudyFlow)", url: github+"/StudyFlow", description: "⭐ Projeto StudyFlow encontrado dentro da estrutura de um curso do Código Fonte TV no GitHub."},
+{ hook: "DadosIA", path: hookfigma.hook1, label: "📉 Analise de Dados - Fato Dimensão", url: github+"/fato-dimensao", description: "⭐ Analise de Dados - Fato Dimensão"},
+{ hook: "DadosIA", path: hookfigma.hook1, label: "🎲 Java com Dados e IA", url: github+"/dados_java_ia", description: "⭐ Java com Dados e IA"},
+{ hook: "Dev", path: hookfigma.hook7, label: "☯ Board", url: github+"/board-dio", description: "⭐ 🏆 Board"},
+{ hook: "Dev", path: hookfigma.hook7, label: "🏆 Design Patterns", url: github+"/design-patterns-dio", description: "⭐ Design Patterns"},
+{ hook: "Dev", path: hookfigma.hook7, label: "☕ POO java", url: github+"/poo-dio", description: "⭐ 🏆 Desafio POO - Demonstração dos 4 Pilares da Programação Orientada a Objetos"},
+{ hook: "Dev", path: hookfigma.hook7, label: "🏆 Sudoku", url: github+"/sudoku-dio", description: "⭐ Sudoku"},
+{ hook: "Dev", path: hookfigma.hook7, label: "🥴 Introdução ao Pull Request", url: github+"/dio-lab-open-source", description: "⭐  Descrição do projeto"},
+{ hook: "Skils", path: hookfigma.hook17, label: "🗣️ Pratice Vocabulary", url: github+"/tofluence", description: "⭐ Pratice Vocabulary - Ferramenta de Potencialização de Vocabulário Inglês"},
+{ hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "⭐ Projeto GmList com PostgreSQL, JPA e API RESTful em Java Spring."},
+{ hook: "Monolíto", path: hookfigma.hook14, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "⭐ Projeto GmList com PostgreSQL, JPA e API RESTful em Java Spring."},
+{ hook: "Fund", path: hookfigma.hook9, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "⭐ Projeto GmList com PostgreSQL, JPA e API RESTful em Java Spring."},
+{ hook: "Dev", path: hookfigma.hook7, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "⭐ Projeto GmList com PostgreSQL, JPA e API RESTful em Java Spring."},
+{ hook: "DadosIA", path: hookfigma.hook1, label: "💥 Integração de Python com Power BI.", url: github+"/py_powerbi", description: "⭐ Conteúdo ou curso sobre integração de Python com Power BI para análise de dados pedidos, produto e despesas."},
+{ hook: "DevOps", path: hookfigma.hook6, label: "🐳 Ambiente de desenvolvimento com Docker", url: github+"/script_docker", description: "⭐ Configuração de ambiente de desenvolvimento utilizando Docker Compose."},
+{ hook: "Fund", path: hookfigma.hook10, label: "🐳 Ambiente de desenvolvimento com Docker", url: github+"/script_docker", description: "⭐ Configuração de ambiente de desenvolvimento utilizando Docker Compose."},
+{ hook: "Skils", path: hookfigma.hook13, label: "💼 Portfólio geral.", url: github+"/fabiuniz", description: "⭐ Portfólio."},
+{ hook: "DadosIA", path: hookfigma.hook1, label: "🤖 Agente AI Google Gemini com java Spring Boot", url: github+"/agente_ai", description: "⭐ Agente de AI Google Gemini usando Java Spring Boot"},
+{ hook: "Dev", path: hookfigma.hook7, label: "☕️ Hello word Java + angular", url: github+"/angular-frontend", description: "⭐ Hello word Java + angular"},
+{ hook: "DevOps", path: hookfigma.hook18, label: "⚙️ Laravel - GitHub Actions - GCP.", url: github+"/laravel-docker-app", description: "⭐ Projeto Laravel Dockerizado com CI/CD - GitHub Actions - Google Cloud Run."},
+{ hook: "Dev", path: hookfigma.hook7, label: "💸 Creditos de Carbono Django", url: github+"/carbon_credit", description: "⭐ Creditos de Carbono Django"},
+{ hook: "DevOps", path: hookfigma.hook18, label: "⚙️ GCP/Heroku Docker - GitHub Actions.", url: github+"/cicd", description: "⭐ Aplicação Flask Dockerizada com CI/CD Automatizado"},
+{ hook: "DadosIA", path: hookfigma.hook2, label: "📈 Previsão de Turnover", url: github+"/turnover", description: "⭐ Previsão de Turnover de Funcionários com FastAPI e TensorFlow."},
+{ hook: "DadosIA", path: hookfigma.hook3, label: "🎯 Extraindo legenda do YouTube via cmd", url: github+"/youtube-transcript", description: "⭐ Extraindo legenda do YouTube usando Python"},
+{ hook: "DadosIA", path: hookfigma.hook2, label: "🧠 Transcrição vídeos e análise de sentimento IA", url: github+"/yt-transcribe-ai", description: "⭐ Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.,"},
+{ hook: "DadosIA", path: hookfigma.hook1, label: "📈 Analise de dados R", url: github+"/r_dados", description: "⭐ Análise de Vendas de uma Loja de Varejo"},
+{ hook: "Dev", path: hookfigma.hook8, label: "🎮 Jogo JS (JavaScript)", url: github+"/game_javascript", description: "⭐ Descrição de um projeto de jogo baseado em JavaScript."},
         ];
 
         /**
